@@ -272,6 +272,7 @@ type).
 ..
 .so lib/dpctl.man
 .
+.so lib/dpdk-unixctl.man
 .so lib/dpif-netdev-unixctl.man
 .so lib/netdev-dpdk-unixctl.man
 .so ofproto/ofproto-dpif-unixctl.man
