@@ -16,6 +16,8 @@ Post-v2.13.0
      * OVS validated with DPDK 19.11.2, due to the inclusion of fixes for
        CVE-2020-10722, CVE-2020-10723, CVE-2020-10724, CVE-2020-10725 and
        CVE-2020-10726, this DPDK version is strongly recommended to be used.
+     * New 'ovs-appctl dpdk/log-list' and 'ovs-appctl dpdk/log-set' commands
+       to list and change log levels in DPDK components.
    - Linux datapath:
      * Support for kernel versions up to 5.5.x.
    - AF_XDP:
